2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.1

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init): Fix
	  localized strings.
	* src/hd-change-background-dialog.c (response_cb,
	  hd_change_background_dialog_init): Fix localised strings.

	* src/hd-bookmark-shortcut.c (gconf_client, thumbnail_icon,
	  hd_bookmark_shortcut_update_from_gconf, hd_bookmark_shortcut_realize,
	  rounded_rectangle, hd_bookmark_shortcut_expose_event,
	  hd_bookmark_shortcut_class_init, hd_bookmark_shortcut_init): Draw
	  nicer shortcut.

	* src/hd-task-shortcut.c (hd_task_shortcut_expose_event): Use a
	  smaller curve.

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c (hd_bookmark_manager_add_bookmark_item):
	Use thumbnail instead of favicon.

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_realize, rounded_rectangle,
	  hd_task_shortcut_expose_event, hd_task_shortcut_class_init,
	  hd_task_shortcut_init): Use nicer transparent background for task
	  shortcuts.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb):
	* src/hd-hildon-home-dbus.c (select_applets_clicked_cb,
	  select_shortcuts_clicked_cb, select_bookmarks_clicked_cb,
	  select_contacts_clicked_cb, manage_views_clicked_cb): Pointer grab
	  and ungrab for system modal dialogs is done in HDCompMgr now.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am:
	* src/home-w50.plugins:
	* src/home.conf.in:
	* src/home.plugins.in: xmas workaround (fix around
	  mediaplayerhomeapplet bug).

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu):
	  fix comment.

2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-activate-views-dialog.c:
	* src/hd-activate-views-dialog.h: Implement "Activate views" dialog (gtk
	  version).
