@@ -1,3 +1,8 @@
+2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_expose_event,
+	  hd_bookmark_shortcut_init): Use background image from theme.
+
 2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.1
